tests/errors/trait-qualified-supertrait-ambiguous.ari
trait LeftScore {
  fn score(self) -> i64
}

trait RightScore {
  fn score(self) -> i64
}

trait BothScores: LeftScore + RightScore {
}

impl LeftScore for i64 {
  fn score(self) -> i64 {
    1
  }
}

impl RightScore for i64 {
  fn score(self) -> i64 {
    2
  }
}

impl BothScores for i64 {
}

fn main() -> i64 {
  BothScores::score(1i64)
}
